# EAG-V3-Week-7

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  usage.json
cognitive_rag/: __init__.py  action.py  agent.py  catalog.py  indexing.py  mcp_server.py
corpus/: MANIFEST.json
docs/: DEFERRALS.md  GUIDE.md  NOTES_RUNS.md  SUBMISSION_TRACES.md
pop/: decision_pop_eval.json  perception_pop_eval.json
runs/: capture_queries.py  eval_suite.py
sandbox/papers/: 2605.20025v2.md  2605.23904v2.md  README.md  attention.md  chain_of_thought.md  dpo.md  lora.md  react.md
sandbox/rag_corpus/: 01_vlm_document_indexing.md  08_dpo_preferences.md  10_lora_adapters.md  12_rag_overview.md  13_faiss_basics.md  14_design_deferrals.md
scripts/: clean.py  corpus.py  download_research_papers.py  index_research_corpus.py
templates/: index.html
tests/: test_architecture.py  test_custom_queries.py  test_deferrals.py  test_document_ingest.py  test_heuristic_tool.py  test_indexing_async.py  test_iteration_logs.py  test_llm_env.py  test_llm_retry.py  test_paths_and_guards.py  test_submission_spec.py
tools/: validate_pop.py
