[project]
name = "cognitive-rag-agent"
version = "0.1.0"
description = "Cognitive agent with FAISS vector memory and document RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0",
    "crawl4ai>=0.8.6",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mcp>=1.27.1",
    "pymupdf>=1.25.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sse-starlette>=3.4.4",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cognitive_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
